# StarRealmsTeamWork

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DataBase.txt  Makefile  README.md  cmake CMakeLists.txt  cmake_install.cmake  main  main.cpp  star  tets_sf.cpp
cmake/: CMakeLists.txt
include/: ClassCard.hpp
project/: Makefile
project/data/: ClassCard.hpp  ClassDeck.hpp  ClassMainDeck.hpp  graphicsUtils.hpp  netWorkUtils.hpp  utils.hpp
project/include/: DataBase.txt  MainDeck.txt  TableShape.cpp  main.cpp
project/include/images/: background.jpg:Zone.Identifier  background_secound.jpg:Zone.Identifier  coin .png:Zone.Identifier  coin.jpg:Zone.Identifier  cross.png:Zone.Identifier
project/netWork/: Makefile  client1  client1.cpp  client2  client2.cpp  netWorkUtils.cpp  server  server.cpp  test.cpp
project/src/: ClassCard.cpp  ClassDeck.cpp  ClassMainDeck.cpp  DeckClass.cpp  graphicsUtils.cpp  main  main.cpp
